--- a/index.html
+++ b/index.html
@@ -1,262 +1,142 @@
-
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Platformer Game (Pyxel)</title>
-  <script src="https://cdn.jsdelivr.net/gh/kitao/pyxel/wasm/pyxel.js"></script>
-  <style>
-    body { margin: 0; padding: 0; overflow: hidden; }
-    canvas { display: block; }
-  </style>
-</head>
-<body>
-  <pyxel-run
-    script='
-      import pyxel
+    <head>
+        <meta charset="UTF-8" />
+        <title>ConaStudio</title>
+        <style>
+            body {
+                font-family: "Arial", "Helvetica", sans-serif;
+                font-size: 17px;
+                background-color: #fefefe;
+                color: #2a2a2a;
+                margin: 20px;
+            }
 
-# ------------------------------
-# 基本エンティティ
-# ------------------------------
-class Entity:
-    def __init__(self, x, y, w, h, color=11, frame_color=None):
-        self.x = x
-        self.y = y
-        self.w = w
-        self.h = h
-        self.color = color
-        self.frame_color = frame_color or color
+            h2 {
+                color: #1e4d7b;
+                font-size: 32px;
+                margin-bottom: 15px;
+            }
 
-    def draw(self):
-        if self.frame_color:
-            pyxel.rectb(self.x, self.y, self.w, self.h, self.frame_color)
-        pyxel.rect(self.x, self.y, self.w, self.h, self.color)
+            h3 {
+                color: #333;
+                font-size: 22px;
+                margin-top: 20px;
+            }
 
-    def is_colliding(self, x, y, w, h):
-        return (
-            x < self.x + self.w
-            and x + w > self.x
-            and y < self.y + self.h
-            and y + h > self.y
-        )
+            a {
+                color: #1e4d7b;
+                text-decoration: none;
+                margin-right: 12px;
+            }
 
+            a:hover {
+                text-decoration: underline;
+            }
 
-# ------------------------------
-# プレイヤー
-# ------------------------------
-class Player(Entity):
-    def __init__(self, x, y, w, h, color=11):
-        super().__init__(x, y, w, h, color)
-        self.vx = 0
-        self.vy = 0
-        self.on_ground = False
-        self.life = 3
-        self.gravity = 0.5
-        self.jump_strength = -5
-        self.move_speed = 2
-        self.invincibility_timer = 0
+            table {
+                border-collapse: collapse;
+                width: 100%;
+                background-color: #fdfdfd;
+                margin-top: 15px;
+            }
 
-    def update(self, blocks):
-        self.handle_input()
-        self.vy += self.gravity
+            th,
+            td {
+                border: 1px solid #aaa;
+                padding: 6px 10px;
+                text-align: center;
+                font-size: 16px;
+            }
 
-        # 予測移動
-        next_x = self.x + self.vx
-        next_y = self.y + self.vy
+            th {
+                background-color: #e8e8e8;
+                font-weight: bold;
+            }
 
-        # 衝突処理
-        next_x, next_y = self.handle_collisions(next_x, next_y, blocks)
+            tr:nth-child(even) {
+                background-color: #f9f9f9;
+            }
 
-        self.x = next_x
-        self.y = next_y
-        self.on_ground = self.check_on_ground(blocks)
+            .section {
+                display: none;
+            }
+        </style>
+    </head>
+    <body>
+        <h2>ConaStudio</h2>
+        <a href="?section=home">Home</a>
+        <a href="?section=apps">Apps</a>
+        <a href="?section=info">Info</a>
 
-    def handle_input(self):
-        self.vx = 0
-        if pyxel.btn(pyxel.KEY_LEFT) or pyxel.mouse_x < pyxel.width // 2 and pyxel.mouse_y > pyxel.height - 20:
-            self.vx = -self.move_speed
-        elif pyxel.btn(pyxel.KEY_RIGHT) or pyxel.mouse_x >= pyxel.width // 2 and pyxel.mouse_y > pyxel.height - 20:
-            self.vx = self.move_speed
+        <div id="home" class="section">
+            <h3>Home</h3>
+            <p>※管理者情報</p>
+            <p>
+                連絡先:
+                <a
+                    href="https://scratch.mit.edu/projects/1216659928/"
+                    target="_blank"
+                    >url</a
+                >
+            </p>
+            <p>
+                サポート:
+                <a href="https://support.conastudio.f5.si" target="_blank"
+                    >url</a
+                >
+            </p>
+        </div>
 
-        if (pyxel.btnp(pyxel.KEY_SPACE) or (pyxel.mouse_x >= pyxel.width - 40 and pyxel.mouse_y <= 40)) and self.on_ground:
-            self.vy = self.jump_strength
+        <div id="info" class="section">
+            <h3>Info</h3>
+            <p>ConaStudioは非営利団体です</p>
+            <p>全てのSoftwareはOSSで無料です</p>
+            <p>2025年にスタジオが生まれました</p>
+        </div>
 
-    def handle_collisions(self, next_x, next_y, blocks):
-        for block in blocks:
-            # X方向
-            if block.is_colliding(next_x, self.y, self.w, self.h):
-                if self.vx > 0:
-                    next_x = block.x - self.w
-                elif self.vx < 0:
-                    next_x = block.x + block.w
-                self.vx = 0
+        <div id="apps" class="section">
+            <h3>Apps</h3>
+            <table id="appsTable">
+                <thead>
+                    <tr>
+                        <th>アプリ名</th>
+                        <th>担当者</th>
+                        <th>ダウンロード</th>
+                        <th>RepoURL</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>ExampleApp1</td>
+                        <td>Tanaka</td>
+                        <td><a href="#">Download</a></td>
+                        <td><a href="#">Repo</a></td>
+                    </tr>
+                    <tr>
+                        <td>ExampleApp2</td>
+                        <td>Suzuki</td>
+                        <td><a href="#">Download</a></td>
+                        <td><a href="#">Repo</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
-            # Y方向
-            if block.is_colliding(self.x, next_y, self.w, self.h):
-                if self.vy > 0:
-                    next_y = block.y - self.h
-                elif self.vy < 0:
-                    next_y = block.y + block.h
-                self.vy = 0
-        return next_x, next_y
-
-    def check_on_ground(self, blocks):
-        for block in blocks:
-            if block.is_colliding(self.x, self.y + 1, self.w, self.h):
-                return True
-        return False
-
-    def draw(self):
-        pyxel.rect(self.x, self.y, self.w, self.h, self.color)
-
-
-# ------------------------------
-# 敵キャラ
-# ------------------------------
-class Mob(Entity):
-    def __init__(self, x, y, w, h, color=8):
-        super().__init__(x, y, w, h, color)
-        self.vx = 1
-
-    def update(self, blocks):
-        next_x = self.x + self.vx
-        if any(block.is_colliding(next_x, self.y, self.w, self.h) for block in blocks):
-            self.vx = -self.vx
-        else:
-            self.x = next_x
-
-
-# ------------------------------
-# パワーアップ
-# ------------------------------
-class PowerUp(Entity):
-    def __init__(self, x, y, w, h, color=10, effect=None):
-        super().__init__(x, y, w, h, color)
-        self.effect = effect
-
-    def apply(self, player):
-        if self.effect == "speed":
-            player.move_speed += 0.5
-        elif self.effect == "jump":
-            player.jump_strength *= 1.2
-        elif self.effect == "invincibility":
-            player.invincibility_timer = pyxel.frame_count + 300
-
-
-# ------------------------------
-# 収集アイテム
-# ------------------------------
-class Collectible(Entity):
-    def __init__(self, x, y, w, h, color=14):
-        super().__init__(x, y, w, h, color)
-
-    def collect(self, player):
-        player.vy = -10
-        player.life += 1
-
-
-# ------------------------------
-# ゲーム本体
-# ------------------------------
-class PlatformerGame:
-    def __init__(self):
-        pyxel.init(160, 120, title="Platformer Game", fps=30)
-
-        self.state = "TITLE"
-        self.level = 1
-        self.score = 0
-        self.life = 3
-
-        self.reset_game()
-        pyxel.run(self.update, self.draw)
-
-    def reset_game(self):
-        self.player = Player(20, 80, 8, 8)
-        self.mobs = [Mob(60, 90, 8, 8), Mob(120, 90, 8, 8)]
-        self.blocks = [
-            Entity(0, 100, 160, 20, color=3, frame_color=7),
-            Entity(50, 80, 20, 10, color=3, frame_color=7),
-            Entity(100, 70, 20, 10, color=3, frame_color=7),
-        ]
-        self.powerups = [
-            PowerUp(80, 50, 8, 8, effect="speed"),
-            PowerUp(130, 60, 8, 8, effect="jump"),
-            PowerUp(140, 20, 8, 8, effect="invincibility"),
-        ]
-        self.collectibles = [Collectible(70, 50, 8, 8)]
-        self.entities = [*self.blocks, self.player, *self.mobs, *self.powerups, *self.collectibles]
-        self.state = "TITLE"
-
-    def update(self):
-        if self.state == "TITLE":
-            if pyxel.btnp(pyxel.KEY_RETURN):
-                self.state = "PLAY"
-        elif self.state == "PLAY":
-            self.update_game()
-            if self.life <= 0 or self.player.y > pyxel.height * 2:
-                self.state = "GAME_OVER"
-        elif self.state == "GAME_OVER":
-            if pyxel.btnp(pyxel.KEY_RETURN):
-                self.reset_game()
-
-    def update_game(self):
-        self.player.update(self.blocks)
-
-        # 敵との衝突
-        for mob in self.mobs[:]:
-            mob.update(self.blocks)
-            if self.player.is_colliding(mob.x, mob.y, mob.w, mob.h):
-                if pyxel.frame_count > getattr(self.player, "invincibility_timer", 0):
-                    self.life -= 1
-                self.mobs.remove(mob)
-
-        # パワーアップ
-        for powerup in self.powerups[:]:
-            if self.player.is_colliding(powerup.x, powerup.y, powerup.w, powerup.h):
-                powerup.apply(self.player)
-                self.powerups.remove(powerup)
-                self.score += 100
-
-        # 収集アイテム
-        for collectible in self.collectibles[:]:
-            if self.player.is_colliding(collectible.x, collectible.y, collectible.w, collectible.h):
-                collectible.collect(self.player)
-                self.collectibles.remove(collectible)
-
-    def draw(self):
-        pyxel.cls(0)
-        cam_x = self.player.x - pyxel.width // 2 + self.player.w // 2
-        cam_y = self.player.y - pyxel.height // 2 + self.player.h // 2
-        pyxel.camera(cam_x, cam_y)
-
-        if self.state == "TITLE":
-            pyxel.text(cam_x + 50, cam_y + 50, "Welcome to Game", pyxel.COLOR_RED)
-            pyxel.text(cam_x + 40, cam_y + 60, "Press RETURN to Start", pyxel.COLOR_WHITE)
-        elif self.state == "PLAY":
-            for entity in self.entities:
-                entity.draw()
-            pyxel.text(cam_x + 5, cam_y + 5, f"Score: {self.score}", pyxel.COLOR_WHITE)
-            pyxel.text(cam_x + 5, cam_y + 15, f"Life: {self.life}", pyxel.COLOR_RED)
-            pyxel.text(cam_x + 5, cam_y + 25, f"Level: {self.level}", pyxel.COLOR_GREEN)
-            pyxel.text(cam_x + 5, cam_y + 35, f"Pos: {self.player.x:.1f},{self.player.y:.1f}", pyxel.COLOR_YELLOW)
-        elif self.state == "GAME_OVER":
-            pyxel.text(cam_x + 50, cam_y + 50, "GAME OVER", pyxel.COLOR_RED)
-            pyxel.text(cam_x + 40, cam_y + 60, "Press RETURN to Restart", pyxel.COLOR_WHITE)
-
-
-# ------------------------------
-# ゲーム起動
-# ------------------------------
-PlatformerGame()
-
-    '
-  ></pyxel-run>
-</body>
+        <script>
+            const sections = document.querySelectorAll(".section");
+            function showSection(id) {
+                sections.forEach((sec) => {
+                    sec.style.display = sec.id === id ? "block" : "none";
+                });
+            }
+            const params = new URLSearchParams(window.location.search);
+            const section = params.get("section");
+            if (["home", "apps", "info"].includes(section)) {
+                showSection(section);
+            } else {
+                showSection("home");
+            }
+        </script>
+    </body>
 </html>
-
-
-
-'
-></pyxel-run>
