--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
 
         <div id="info" class="section">
             <h3>Info</h3>
-            <p>ConaStudioは非営利団体です</p>
-            <p>全てのSoftwareはOSSで無料です</p>
             <p>2025年にスタジオが生まれました</p>
+            <p>ConaStudioは非営利団体です</p>
+            <p>開発にかかる 人件費、サーバー費などを削り常に無料で配布しています</p>
+            <p>アプリはGithubにあげてあり、ユーザーたちは改造することができます</p> 
         </div>
 
         <div id="apps" class="section">
@@ -122,6 +123,14 @@
                 </tbody>
             </table>
         </div>
+        <div id="policy" class="section">
+            <h3>Policy</h3>
+            <p>利用規約:</p>
+            <p>ConaStudioに関する全て以下に適応する</p>
+            <p>1. いかなる損害を一切負い兼ねる</p>
+            <p>2. 犯罪または犯罪となりゆることへ、ConaStudioのAppを使用することを禁止する</p>
+            <p>以上のことへ、同意下のち利用を開始してください</p>
+        </div>
 
         <script>
             const sections = document.querySelectorAll(".section");
@@ -132,7 +141,7 @@
             }
             const params = new URLSearchParams(window.location.search);
             const section = params.get("section");
-            if (["home", "apps", "info"].includes(section)) {
+            if (["home", "apps", "info", "policy"].includes(section)) {
                 showSection(section);
             } else {
                 showSection("home");
