--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <p>ConaStudioに関する全て以下に適応する</p>
             <p>1. いかなる損害を一切負い兼ねる</p>
             <p>2. 犯罪または犯罪となりゆることへ、ConaStudioのAppを使用することを禁止する</p>
-            <p>以上のことへ、同意下のち利用を開始してください</p>
+            <p>以上のことへ、同意したのち利用を開始してください</p>
         </div>
 
         <script>
