--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <a href="?section=home">Home</a>
         <a href="?section=apps">Apps</a>
         <a href="?section=info">Info</a>
+        <a href="?section=info">Policy (必ず読んでください)</a>
 
         <div id="home" class="section">
             <h3>Home</h3>
