--- a/index.html
+++ b/index.html
@@ -102,16 +102,16 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>ExampleApp1</td>
-                    <td>Tanaka</td>
-                    <td><a href="#">Download</a></td>
-                    <td><a href="#">Repo</a></td>
+                    <td>Kusoge1</td>
+                    <td>Okabe</td>
+                    <td><a href="https://github.com/nyanthu-okabe/NyanthuUtillSoft/releases/download/v1.02/1.1.1.2.html">Download</a></td>
+                    <td><a href="https://github.com/nyanthu-okabe/NyanthuUtillSoft/releases">Repo</a></td>
                 </tr>
                 <tr>
-                    <td>ExampleApp2</td>
-                    <td>Suzuki</td>
-                    <td><a href="#">Download</a></td>
-                    <td><a href="#">Repo</a></td>
+                    <td>Kusoge2</td>
+                    <td>Okabe</td>
+                    <td><a href="https://github.com/nyanthu-okabe/NyanthuUtillSoft/releases/download/v1.01/1.1.1.1.1.html">Download</a></td>
+                    <td><a href="https://github.com/nyanthu-okabe/NyanthuUtillSoft/releases/">Repo</a></td>
                 </tr>
             </tbody>
         </table>
