--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
         <h3>Info</h3>
         <p>ConaStudioは2025年に設立された非営利団体です。</p>
         <p>開発にかかる人件費やサーバー費などの出費を抑え、常にアプリを無料で配布しています。</p>
-        <p>すべてのアプリはGitHubで公開しており、ユーザーは自由に改造することが可能です。</p>
+        <p>すべてのアプリはGitHubで公開しており、ユーザーは自由に改造することが可能です。(※1)</p>
         <p>ConaStudioは(nyanchu studio)の子プロジェクトとして、独自のアイデアや実験的な開発を推進しています。</p>
+        <a>※1 サイトなどの公開によってセキュリティーなどの問題が発生する可能性のあるサイトは非公開になっています。</a>
     </div>
 
     <div id="apps" class="section">
