--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>ConaStudio</title>
+    <link rel="icon" type="image/png" href="./icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./icon.png">
     <style>
         body {
             font-family: "Arial", "Helvetica", sans-serif;
