--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     </style>
 </head>
 <body>
+    <img src="./icon.png" />
     <h2>ConaStudio</h2>
     <a href="?section=home">Home</a>
     <a href="?section=apps">Apps</a>
